--- a/story-view/css/style.css
+++ b/story-view/css/style.css
@@ -139,12 +139,11 @@ body {
   transform: rotate(-90deg);
 }
 
-/* BULLET (NÍVEL 1) E ESTRUTURA DA ÁRVORE */
+/* --- INÍCIO DA SEÇÃO DE ESTILO DA ÁRVORE --- */
+
 .bullet-block {
   margin: 1.5rem 0;
-  display: flex;
-  flex-direction: column;
-  gap: 0.5rem;
+  position: relative;
 }
 
 .bullet-item {
@@ -153,6 +152,7 @@ body {
   color: #facc15;
   padding-left: 1.5rem;
   position: relative;
+  margin-bottom: 0.75rem; 
 }
 
 .bullet-item::before {
@@ -164,56 +164,42 @@ body {
   top: -0.1rem;
 }
 
-/* CONTAINER PARA OS FILHOS DA ÁRVORE */
 .sub-bullet-wrapper {
   position: relative;
-  padding-left: 1.5rem; 
-  margin-top: 0.75rem;
+  padding-left: 1.5rem;
 }
 
-/* LINHA VERTICAL PRINCIPAL QUE CONECTA OS NÓS */
-.sub-bullet-wrapper::before {
-  content: '';
-  position: absolute;
-  left: 0.5rem; 
-  top: 0;
-  bottom: 0;
-  width: 2px;
-  background-color: rgba(203, 213, 225, 0.2);
-}
-
-/* CADA NÓ DA ÁRVORE (FILHO OU NETO) */
 .sub-bullet-node {
   position: relative;
-  padding-left: 1.5rem; 
-  margin-bottom: 0.75rem;
+  padding: 0.1rem 0 0.1rem 1.75rem;
+  margin-bottom: 0.5rem;
 }
 
-/* LINHA HORIZONTAL (de ├ ) QUE CONECTA O NÓ À LINHA VERTICAL */
 .sub-bullet-node::before {
   content: '';
   position: absolute;
+  top: 0;
   left: 0;
-  top: 0.8em; 
-  width: 1rem; 
-  height: 2px;
-  background-color: rgba(203, 213, 225, 0.3);
+  width: 2px;
+  height: 100%;
+  background: rgba(186, 230, 253, 0.2);
 }
 
-/* REMOVE O ESPAÇO INFERIOR DO ÚLTIMO NÓ DE UM GRUPO */
-.sub-bullet-node:last-child {
-  margin-bottom: 0;
-}
-
-/* AJUSTA A LINHA VERTICAL DO ÚLTIMO NÓ PARA FORMAR UM 'L' (└) */
-.sub-bullet-wrapper > .sub-bullet-node:last-child::after {
+.sub-bullet-node::after {
   content: '';
   position: absolute;
-  left: -22px;
-  top: 0.8em;
-  bottom: 0;
-  width: 2px;
-  background-color: #1c1917; 
+  top: 0.9em;
+  left: 0;
+  width: 1rem; 
+  height: 2px;
+  background: rgba(186, 230, 253, 0.3);
+}
+
+.sub-bullet-wrapper > .sub-bullet-node:last-child {
+    margin-bottom: 0;
+}
+.sub-bullet-wrapper > .sub-bullet-node:last-child::before {
+  height: 0.9em;
 }
 
 .branch-content {
