--- a/story-view/css/style.css
+++ b/story-view/css/style.css
@@ -139,7 +139,8 @@ body {
   transform: rotate(-90deg);
 }
 
-/* --- INÍCIO DA VERSÃO FINAL DO ESTILO DA ÁRVORE --- */
+/* --- INÍCIO DA VERSÃO FINAL E CORRIGIDA DA ÁRVORE --- */
+
 .bullet-block {
   margin: 1.5rem 0;
   position: relative;
@@ -148,10 +149,10 @@ body {
 .bullet-item {
   font-weight: 600;
   font-size: 1rem;
-  color: #facc15; 
+  color: #facc15;
   padding-left: 1.5rem;
   position: relative;
-  margin-bottom: 0.75rem;
+  margin-bottom: 0.5rem;
 }
 
 .bullet-item::before {
@@ -165,10 +166,15 @@ body {
 
 .sub-bullet-wrapper {
   position: relative;
-  padding-left: 1.5rem; 
+  padding-left: 1.5rem;
 }
 
-.sub-bullet-wrapper::before {
+.sub-bullet-node {
+  position: relative;
+  padding: 0.15rem 0 0.15rem 1.75rem;
+}
+
+.sub-bullet-node::before {
   content: '';
   position: absolute;
   left: 0;
@@ -178,29 +184,18 @@ body {
   background: rgba(186, 230, 253, 0.2);
 }
 
-.sub-bullet-node {
-  position: relative;
-  padding: 0.25rem 0 0.25rem 1.75rem;
-}
-
 .sub-bullet-node::after {
   content: '';
   position: absolute;
-  top: 1em;
   left: 0;
+  top: 1em;
   width: 1rem;
   height: 2px;
   background: rgba(186, 230, 253, 0.3);
 }
 
-.sub-bullet-wrapper > .sub-bullet-node:last-child::before {
-  content: '';
-  position: absolute;
-  background-color: #1c1917;
-  left: -1.5rem; 
-  top: 1em;
-  width: 2px;
-  height: calc(100% - 1em);
+.sub-bullet-node:last-child::before {
+  height: 1em;
 }
 
 .branch-content {
@@ -209,4 +204,4 @@ body {
   line-height: 1.5rem;
 }
 
-/* --- FIM DA VERSÃO FINAL DO ESTILO DA ÁRVORE --- */
+/* --- FIM DA VERSÃO FINAL E CORRIGIDA DA ÁRVORE --- */
