--- a/story-view/css/style.css
+++ b/story-view/css/style.css
@@ -139,7 +139,7 @@ body {
   transform: rotate(-90deg);
 }
 
-/* --- INÍCIO DA VERSÃO FINAL E CORRIGIDA DA ÁRVORE --- */
+/* --- INÍCIO DA VERSÃO COM AJUSTES FINOS --- */
 
 .bullet-block {
   margin: 1.5rem 0;
@@ -166,7 +166,7 @@ body {
 
 .sub-bullet-wrapper {
   position: relative;
-  padding-left: 1.5rem;
+  padding-left: 2rem;
 }
 
 .sub-bullet-node {
@@ -188,14 +188,14 @@ body {
   content: '';
   position: absolute;
   left: 0;
-  top: 1em;
+  top: 1.05em;
   width: 1rem;
   height: 2px;
   background: rgba(186, 230, 253, 0.3);
 }
 
 .sub-bullet-node:last-child::before {
-  height: 1em;
+  height: 1.05em;
 }
 
 .branch-content {
@@ -204,4 +204,4 @@ body {
   line-height: 1.5rem;
 }
 
-/* --- FIM DA VERSÃO FINAL E CORRIGIDA DA ÁRVORE --- */
+/* --- FIM DA VERSÃO COM AJUSTES FINOS --- */
