--- a/story-view/css/style.css
+++ b/story-view/css/style.css
@@ -139,7 +139,7 @@ body {
   transform: rotate(-90deg);
 }
 
-/* --- INÍCIO DA VERSÃO MINIMALISTA (SEM LINHAS) --- */
+/* --- INÍCIO DA VERSÃO COM LINHAS APENAS PARA NETOS (-->) --- */
 
 .bullet-block {
   margin: 1.5rem 0;
@@ -166,7 +166,7 @@ body {
 
 .sub-bullet-wrapper {
   position: relative;
-  padding-left: 2rem;
+  padding-left: 1.5rem;
 }
 
 .sub-bullet-node {
@@ -179,10 +179,41 @@ body {
   display: none;
 }
 
+.sub-bullet-wrapper .sub-bullet-wrapper .sub-bullet-node {
+  padding: 0.15rem 0 0.15rem 1.75rem;
+}
+
+.sub-bullet-wrapper .sub-bullet-wrapper .sub-bullet-node::before,
+.sub-bullet-wrapper .sub-bullet-wrapper .sub-bullet-node::after {
+  display: block;
+  content: '';
+  position: absolute;
+}
+
+.sub-bullet-wrapper .sub-bullet-wrapper .sub-bullet-node::before {
+  left: 0;
+  top: 0;
+  width: 2px;
+  height: 100%;
+  background: rgba(186, 230, 253, 0.2);
+}
+
+.sub-bullet-wrapper .sub-bullet-wrapper .sub-bullet-node::after {
+  left: 0;
+  top: 1em;
+  width: 1rem;
+  height: 2px;
+  background: rgba(186, 230, 253, 0.3);
+}
+
+.sub-bullet-wrapper .sub-bullet-wrapper .sub-bullet-node:last-child::before {
+  height: 1em;
+}
+
 .branch-content {
   color: #cbd5e1;
   font-size: 0.95rem;
   line-height: 1.5rem;
 }
 
-/* --- FIM DA VERSÃO MINIMALISTA (SEM LINHAS) --- */
+/* --- FIM DA VERSÃO COM LINHAS APENAS PARA NETOS (-->) --- */
