--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,49 +5,20 @@ body {
     font-family: 'Roboto', sans-serif;
     background-color: #121222;
     color: #EAEAEA;
+    padding-top: 64px; 
 }
 
-nav {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    height: 8%;
-    background-color: #333;
-    padding: 10px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 1);
-    z-index: 1000;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+.nav-bar {
+    background-color: rgba(18, 18, 34, 0.75);
+    backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
+    border-bottom: 1px solid rgba(42, 42, 74, 0.5);
 }
-
-.nav {
-    color: #d8d8d8;
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
+.squircle-icon {
+    width: 40px;
+    height: 40px;
+    border-radius: 35%;
 }
-
-.nav li {
-    margin-right: 20px;
-}
-
-.nav a {
-    color: white;
-    text-decoration: none;
-    padding: 5px 10px;
-    border-radius: 4px;
-}
-
-.nav a:hover {
-    color: #a3a3a3;
-    text-decoration: underline;
-}
-
-
 
 .font-exo {
     font-family: 'Exo 2', sans-serif;
@@ -142,4 +113,28 @@ nav {
     outline: none;
     border-color: #e73c7e;
     box-shadow: 0 0 10px rgba(231, 60, 126, 0.3);
+}
+
+@media screen and (max-width: 768px) {
+    .timeline::after {
+        left: 31px;
+    }
+
+    .timeline-container {
+        width: 100%;
+        padding-left: 70px;
+        padding-right: 25px;
+    }
+
+    .timeline-container.right {
+        left: 0%;
+    }
+
+    .timeline-container::after {
+        left: 21px; 
+    }
+
+    .right::after {
+        left: 21px;
+    }
 }
